2013-10-08  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #51801: typolink.linkAccessRestrictedPages has no effect if RealURL is enabled

2013-10-07  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #51471: fatal error in info module in TYPO3 6.2 (rev a52257a56b0cdb17fd3fbda91ab4c75bd3cad33c)

2013-09-25  TYPO3 Security team <security@typo3.org>

	* Security fix for TYPO3-EXT-SA-2013-015
	* Released version 1.12.7

	WARNING! Version 1.12.7 has only changes made prior/on 2013-05-07 plus security fixes. It does not include fixes from later days. Those fixes appear in 1.12.8 release.

2013-07-24  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Use a distinct status string when redirecting from the RealURL
	* Fixed bug #45398: getLanguageVar() returns 0 instead of sys_language_uid (thanks to Andreas Beutel)
	* Fixed bug #41515: Wrong value applied for GET var when using value default (thanks to Helmut Hummel)
	* Fixed bug #48514: 404 if path segment is empty

2013-05-20  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Remove inclusion of old TYPO3 files. Rely on autoloader and compatibility layer now.
	* Fix 'not deleted' in the manual (wrong SQL syntax in examples)

2013-05-07  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fix mixed case extension key
	* Released version 1.12.6

2013-05-06  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Released version 1.12.5

2013-04-11  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* [BUGFIX] mysqli compatibility issue with TYPO3 CMS 6.1 (thanks to Benni Mack and Oliver Hader)
	* Fixed bug #46782: avoid using loadTCA with TYPO3 >= 6.1
	* Change url decoding: replace rawurldecode() with urldecode()
	* [BUGFIX] Decodefilename adds rawurlencode to only one segment (thanks to Stephan Schuler)

2013-03-13  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Released version 1.12.4

2013-02-26  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
