@@ -1,6 +1,7 @@
 2013-10-08  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #51801: typolink.linkAccessRestrictedPages has no effect if RealURL is enabled
+	* Fixed bug #51287: add cHash on decoding only if there are relevant parameters
 
 2013-10-07  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
